# Motoro

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: dialog.rs  main.rs  price.rs
julia/: my_code.jl
julia/Motoro/src/: Motoro.jl  models.jl
server/: Cargo.toml
server/src/: main.rs  routes.rs  tasks.rs
src/: dialog.rs  main.rs  price.rs
