[package]
name = "julia_app"
version = "0.1.0"
edition = "2024"
description = "A Rust application that uses Julia"

[features]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
dialoguer = "0.12.0"
jlrs = {version = "0.22", features = ["local-rt"]}
